# l0ttie

./: Cargo.toml  README.md  build.rs  test.json
.github/workflows/: ci.yml  release.yml
src/: fit.rs  lib.rs  main.rs  mode.rs
