[package]
name = "l0ttie"
license = "GPL-3.0-or-later"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
dotlottie-rs = { git = "https://github.com/LottieFiles/dotlottie-rs.git", tag = "v0.1.43", features = [
    "thorvg-v0",
] }
frei0r-rs2 = { git = "https://github.com/rectalogic/frei0r-rs.git", tag = "2.1.0" }
