[package]
name = "l0ttie"
license = "GPL-3.0-or-later"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.98"
dotlottie-rs = { git = "https://github.com/LottieFiles/dotlottie-rs.git", rev = "07c78aa61f5093b0e78c465f7e1a06e60f013f35", features = [
    "thorvg-v0",
] }
frei0r-rs2 = { git = "https://github.com/rectalogic/frei0r-rs.git", tag = "2.1.0" }
