[package]
name = "l0ttie"
license = "GPL-3.0-or-later"
version = "0.2.0"
edition = "2024"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
frei0r-rs2 = { git = "https://github.com/rectalogic/frei0r-rs.git", tag = "2.2.0" }
anyhow = "1.0.98"
dotlottie-rs = { git = "https://github.com/LottieFiles/dotlottie-rs.git", tag = "v0.1.44", features = [
    "thorvg-v0",
] }
ureq = "3.0.12"
